# PTTArticleRecommander

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/Modules/: FindOpenCC.cmake
report/: reportnew.aux  reportnew.blg  reportnew.synctex.gz(busy)  reportnew.tex
src/: CMakeLists.txt  install_symlink_bin.sh
src/app_client/: CMakeLists.txt  README.md  mainfest.json  manifest.json  popup.html  setup.sh
src/app_client/inject/: common.js  controller.js  event_object.js  main.js  model.js  view.css  view.html  view.js
src/app_server/: CMakeLists.txt  README.md  example_module2.py  main.py
src/app_server/modules/: article_analysis.py  article_analysis_test.py  http_request_handler.py  http_request_handler_test.py  main_handler.py  main_handler_test.py  miner.py  miner_test.py  protocol  proxy_client.py  proxy_client_test.py  utils.py
src/article_analysis/: CMakeLists.txt  README.md  main.cc
src/article_analysis/analyst/: analyst.cc  analyst.h  doc_info.h  i_analyst.h
src/article_analysis/analyst/impl_/: empty_analyst.h  fake_analyst.cc  fake_analyst.h  tf_idf_analyst.cc  tf_idf_analyst.h  tf_idf_analyst_content.cc  tf_idf_analyst_content.h  tf_idf_analyst_title.cc  tf_idf_analyst_title.h
src/article_analysis/arg_parser/: arg_parser-test.cc  arg_parser.cc  arg_parser.h
src/article_analysis/dummy/: a.cc
src/article_analysis/logger/: logger.h
src/article_analysis/logging/: logger.cc  logger.h
src/article_analysis/miner/: miner-test.cc  miner.cc  miner.h
src/article_analysis/protocol/: converter-test.cc  converter.h  i_dumpable.h  i_loadable.h  net-test.cc  net.cc  net.h  types-test.cc  types.h
src/article_analysis/server/: server-test.cc  server.cc  server.h
src/article_analysis/utils/: arg_parser-test.cc  arg_parser.cc  arg_parser.h  funcs-test.cc  funcs.cc  funcs.h  i_range_iterate_support-test.cc  i_range_iterate_support.h  options-test.cc  options.cc  options.h  types.h  variant-test.cc  variant.h
src/miner/: CMakeLists.txt  README.md  main.py  test_main.py
src/miner/example_module1/: a.py
src/miner/modules/: backend_interface.py  build.py  mining.py  real_main.py  server.py  server_test.py  utils.py
src/miner/modules/l2_miner/: __init__.py  board_listener.py  board_listener_test.py  cache.py  cache_test.py  common.py  crewer.py  crewer_test.py  real_backend.py  real_backend_interface.py  real_backend_test.py  storage.py  storage_test.py
src/miner/modules/protocol/: net.py  net_test.py  types.py  types_test.py
